--- a/MyApplicationNotasPromedio/app/src/main/res/layout/activity_promedio.xml
+++ b/MyApplicationNotasPromedio/app/src/main/res/layout/activity_promedio.xml
@@ -38,6 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="84dp"
+            android:enabled="false"
             android:text="Promedio"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.898"
