--- a/MyApplicationNotasPromedio/app/src/main/res/layout/activity_main.xml
+++ b/MyApplicationNotasPromedio/app/src/main/res/layout/activity_main.xml
@@ -9,21 +9,24 @@
 
     <TextView
         android:id="@+id/ingresLb"
-        android:layout_width="177dp"
-        android:layout_height="40dp"
-        android:layout_marginTop="192dp"
-        android:text="Digite la cantidad de notas a promediar"
+        android:layout_width="338dp"
+        android:layout_height="101dp"
+        android:layout_marginTop="100dp"
+        android:text="Ingresa la cantidad de notas"
+        android:textSize="40sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/regresarBtn" />
 
     <EditText
         android:id="@+id/promedioEditTxt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="30dp"
         android:ems="10"
+        android:hint="Ej: 5 "
         android:inputType="textPersonName"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ingresLb" />
@@ -32,20 +35,21 @@
         android:id="@+id/promedioBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="80dp"
         android:text="Siguiente"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@+id/regresarBtn"
+        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/promedioEditTxt" />
 
     <Button
         android:id="@+id/regresarBtn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="84dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="50dp"
         android:text="Regresar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.287"
+        android:textSize="16sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/promedioEditTxt" />
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
