--- a/MyApplicationNotasPromedio/app/src/main/res/layout/activity_main.xml
+++ b/MyApplicationNotasPromedio/app/src/main/res/layout/activity_main.xml
@@ -37,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:text="Siguiente"
+        android:textColor="#FFFFFF"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
